classDiagram

class PlantCategory {
  +int id
  +string name

  +getCategoryById(id)
  +listAll()
}

class PlantType {
  +int id
  +string name

  +getTypeById(id)
  +listAll()
}

class Plant {
  +int id
  +string name
  +string subtitle
  +float price
  +int discountPercentage
  +string description
  +string features
  +string imgUrl
  +bool isInSale
  +datetime createdAt
  +datetime updatedAt
  +int plantCategoryId

  +createPlant()
  +getPlantById(id)
  +updatePlant(id, data)
  +deletePlant(id)
  +listAll()
  +listAllByUserId(userId)
}

class User {
  +int id
  +string name
  +string email
  +string password_hash
  +datetime createdAt
  +datetime updatedAt

  +createUser()
  +getUserById(id)
  +updateUser(id, data)
  +deleteUser(id)
  +listAll()
}

class Order {
  +int id
  +int user_id
  +int plant_id
  +string description
  +datetime created_at
  +datetime updated_at

  +createOrder()
  +getOrderById(id)
  +updateOrder(id, data)
  +deleteOrder(id)
  +listAllByUserId(userId)
}

class PlantTypePlant {
  +int plantId
  +int plantTypeId
}

class UserPlant {
  +int userId
  +int plantId
}

PlantCategory "1" --> "m" Plant : categoriza
Plant "1" --> "m" PlantTypePlant : está em
PlantType "1" --> "m" PlantTypePlant : define

User "1" --> "m" UserPlant : possui
Plant "1" --> "m" UserPlant : relacionado a

User "1" --> "m" Order : realiza
Plant "1" --> "m" Order : vendido em
